新增「全字庫正楷體」字型檔案
使讀者的裝置即使沒內建標楷體也能用相似的正楷體顯示

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>國立科技高中─校園社團介紹</title>
     <style>
+        @font-face {
+            font-family: '全字庫正楷體';
+            src: url('./font/TW-Kai-98_1.ttf'), url('./font/TW-Kai-Ext-B-98_1.ttf'), url('./font/TW-Kai-Plus-98_1.ttf');
+        }
+
         #main {
             width: 1024px;
             height: 768px;
@@ -34,7 +39,7 @@
         #menu div {
             color: #f0f;
             font-size: 24px;
-            font-family: "標楷體";
+            font-family: "標楷體", 'DDFKai-sb', "標楷體-繁", "全字庫正楷體";
             font-weight: 500;
             text-decoration: underline;
             text-align: center;
@@ -45,7 +50,7 @@
             text-align: center;
             color: #000;
             font-size: 16px;
-            font-family: "標楷體";
+            font-family: "標楷體", 'DDFKai-sb', "標楷體-繁", "全字庫正楷體";
             background: url(./images/menu1.png) no-repeat center;
             height: 40px;
             width: 215px;
@@ -66,7 +71,7 @@
             height: 20px;
             text-align: center;
             color: #000000;
-            font-family: "標楷體";
+            font-family: "標楷體", 'DDFKai-sb', "標楷體-繁", "全字庫正楷體";
             font-size: 16px;
         }
 
@@ -81,7 +86,7 @@
         marquee {
             height: 29px;
             width: 770px;
-            font-family: "標楷體";
+            font-family: "標楷體", 'DDFKai-sb', "標楷體-繁", "全字庫正楷體";
             font-size: 24px;
             color: blue;
         }
@@ -98,7 +103,7 @@
             clear: both;
             text-align: center;
             color: #000000;
-            font-family: "標楷體";
+            font-family: "標楷體", 'DDFKai-sb', "標楷體-繁", "全字庫正楷體";
             font-size: 16px;
         }
     </style>
