--- a/main.html
+++ b/main.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
     <style>
+        @font-face {
+            font-family: '全字庫正楷體';
+            src: url('./font/TW-Kai-98_1.ttf'), url('./font/TW-Kai-Ext-B-98_1.ttf'), url('./font/TW-Kai-Plus-98_1.ttf');
+        }
+
         body {
             background: url(./images/0101.jpg);
         }
@@ -13,7 +18,7 @@
         div {
             text-align: center;
             font-size: 24px;
-            font-family: "標楷體";
+            font-family: "標楷體", 'DDFKai-sb', "標楷體-繁", "全字庫正楷體";
             color: #0000ff;
             font-style: italic;
             font-weight: bold;
@@ -36,10 +41,10 @@
     <br>
     <br>
     <div>
-        嗨！歡迎加入國立科技高中。<br>
-        參加社團不僅可以豐富自己的人生、寬闊自己的視野，<br>
-        也能砥礪技能、磨練人際、培養第二專長。<br>
-        選擇一項您喜歡的社團，積極的參與和投入，<br>
+        嗨！歡迎加入國立科技高中。<br>
+        參加社團不僅可以豐富自己的人生、寬闊自己的視野，<br>
+        也能砥礪技能、磨練人際、培養第二專長。<br>
+        選擇一項您喜歡的社團，積極的參與和投入，<br>
         您會獲得一陣陣的驚喜 ！<br>
     </div>
 </body>
