修正 main 的部分中文字字型顯示異常問題
保留一個「不」字作為參考

--- a/main.html
+++ b/main.html
@@ -36,8 +36,10 @@
 </head>
 
 <body>
-    <!-- 媒體的鍊結掛掉的時候顯示 alt；滑鼠在媒體上 hover 時出現 title -->
-    <div><img src="./images/0104.jpg" alt="科技高中校長" title="科技高中校長"></div>
+    <!-- 媒體連結掛掉時顯示 alt；滑鼠 hover 時出現 title -->
+    <div>
+        <img src="./images/0104.jpg" alt="科技高中校長" title="科技高中校長">
+    </div>
     <br>
     <br>
     <div>
@@ -47,6 +49,7 @@
         選擇一項您喜歡的社團，積極的參與和投入，<br>
         您會獲得一陣陣的驚喜 ！<br>
     </div>
+    <!-- 這個「不」字編碼跟常用的不同，故無法正確顯示指定的字型。 -->
 </body>
 
 </html>
